--- a/templates/index.html
+++ b/templates/index.html
@@ -59,11 +59,10 @@
   <!-- Projects Section -->
   <section id="projects" class="section">
     <h2>Projects</h2>
-    <div class="project">
-       <style="background: linear-gradient(to right, #FF7F50, #FF6347);">
-       <a href="https://github.com/nissysharon/PriceGuard" target="_blank">PriceGuard Project</a>
-       <p>Description for PriceGuard project: A web scraping and price tracking application.</p>
-    </div>
+    <div class="project" style="background: linear-gradient(to right, #FF7F50, #FF6347);">
+    <a href="https://github.com/nissysharon/PriceGuard" target="_blank">PriceGuard Project</a>
+    <p>Description for PriceGuard project: A web scraping and price tracking application.</p>
+   </div>
 
     <div class="project">
       <img src="{{ url_for('static', filename='images/profile-pic.jpeg') }}" alt="Nissy Carolin Pakalapati" class="profile-pic">
