--- a/templates/index.html
+++ b/templates/index.html
@@ -58,17 +58,21 @@
 
   <!-- Projects Section -->
   <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="project" style="background: linear-gradient(to right, #FF7F50, #FF6347);">
-    <a href="https://github.com/nissysharon/PriceGuard" target="_blank">PriceGuard Project</a>
-    <p>Description for PriceGuard project: A web scraping and price tracking application.</p>
-   </div>
-
+  <h2>Projects</h2>
+    <!-- PriceGuard Project -->
     <div class="project">
-      <img src="{{ url_for('static', filename='images/profile-pic.jpeg') }}" alt="Nissy Carolin Pakalapati" class="profile-pic">
+      <img src="{{ url_for('static', filename='images/project_common_img.jpg') }}" alt="PriceGuard Project Image" class="project-image">
+      <a href="https://github.com/nissysharon/PriceGuard" target="_blank">PriceGuard Project</a>
+      <p>Description for PriceGuard project: A web scraping and price tracking application.</p>
+    </div>
+    
+    <!-- Other Project -->
+    <div class="project">
+      <img src="{{ url_for('static', filename='images/project_common_img.jpg') }}" alt="Project Two Image" class="project-image">
       <a href="https://github.com/yourusername/project-two" target="_blank">Project Two</a>
       <p>Description for Project Two.</p>
     </div>
+
   </section>
 
   <!-- Contact Me Section -->
